--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,8 +5,8 @@ repos:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
 
-  - repo: https://github.com/python-poetry/poetry
-    rev: "1.6.1"
-    hooks:
-      - id: poetry-check
-      - id: poetry-lock
+  # - repo: https://github.com/python-poetry/poetry
+  #   rev: 1.2.0
+  #   hooks:
+  #     - id: poetry-check
+  #     - id: poetry-lock
