--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ python = "^3.9"
 rich = "^13.6.0"
 requests = "^2.31.0"
 
+[tool.poetry.group.linters.dependencies]
+ruff = "^0.1.3"
 
 [tool.ruff]
 line-length = 100
