--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "ddns_digital_ocean"
 version = "0.3.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Python-based CLI tool for managing dynamic dns."
+authors = ["Tyler Nivin <tyler@nivin.tech>"]
 readme = "README.md"
 
 [build-system]
@@ -19,7 +19,26 @@ rich = "^13.6.0"
 requests = "^2.31.0"
 
 [tool.poetry.group.linters.dependencies]
-ruff = "^0.1.3"
+ruff = "^0.6.2"
 
 [tool.ruff]
 line-length = 100
+
+[tool.ruff.lint]
+# Configure which ruff rules to enable.
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+    # Unused noqa comments
+    "RUF100",
+]
