--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ requests = "^2.31.0"
 ruff = "^0.6.2"
 
 [tool.ruff]
-line-length = 100
+# Uncomment to over-ride the line-length used by ruff.
+# line-length = 100
 
 [tool.ruff.lint]
 # Configure which ruff rules to enable.
