--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ ruff = "^0.6.2"
 
 [tool.poetry.group.tests.dependencies]
 pytest = "^8.3.2"
+pytest-check = "^2.3.1"
+pytest-mock = "^3.14.0"
 
 [tool.ruff]
 # Uncomment to over-ride the line-length used by ruff.
@@ -48,4 +50,13 @@ select = [
     "RUF100",
     # Flake8-bandit
     "S"
+]
+
+[tool.ruff.lint.extend-per-file-ignores]
+"tests/**/*.py" = [
+    # at least this three should be fine in tests:
+    "S101", # asserts allowed in tests...
+    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
+    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
+    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
 ]
