--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ ruff = "^0.6.2"
 pytest = "^8.3.2"
 pytest-check = "^2.3.1"
 pytest-mock = "^3.14.0"
+requests-mock = "^1.12.1"
 
 [tool.ruff]
 # Uncomment to over-ride the line-length used by ruff.
