--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,16 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Python Debugger: CLI Tool",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "ddns_digital_ocean.ddns",
-            "console": "integratedTerminal",
-            "args": [],
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Python Debugger: CLI Tool",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "ddns_digital_ocean.ddns",
+      "console": "integratedTerminal",
+      "args": []
+    }
+  ]
 }
