--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,10 @@ classifiers = [
 
 dependencies = ["rich>=13.8.0", "requests>=2.32.3"]
 
+[project.urls]
+Repository = "https://github.com/nivintw/ddns"
+Issues = "https://github.com/nivintw/ddns/issues"
+
 [project.scripts]
 do_ddns = 'ddns_digital_ocean.ddns:run'
 
