--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
     rev: v1.5.0
     hooks:
       - id: detect-secrets
-        exclude: poetry.lock
+        exclude: uv.lock
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.6.2
@@ -24,9 +24,3 @@ repos:
         args: [--fix, --exit-non-zero-on-fix]
       # Run the formatter
       - id: ruff-format
-
-  # - repo: https://github.com/python-poetry/poetry
-  #   rev: 1.2.0
-  #   hooks:
-  #     - id: poetry-check
-  #     - id: poetry-lock
