--- a/licenserc.toml
+++ b/licenserc.toml
@@ -37,7 +37,8 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 SPDX-License-Identifier: AGPL-3.0-or-later
-Copyright ${hawkeye.git.fileCreatedYear} - ${hawkeye.git.fileModifiedYear}, ${copyrightOwner} and the ${projectName} contributors
+Copyright ${hawkeye.git.fileCreatedYear} - ${hawkeye.git.fileModifiedYear}, ${copyrightOwner}
+and the ${projectName} contributors
 """
 
 
