--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ dev-dependencies = [
     "pytest-mock>=3.14.0",
     "responses>=0.25.3",
     "pytest-cov>=5.0.0",
+    "ipython>=8.27.0",
 ]
 
 [tool.ruff]
