--- a/licenserc.toml
+++ b/licenserc.toml
@@ -1,4 +1,4 @@
-# ddns-digital-ocean
+# digital-ocean-dynamic-dns
 # Copyright (C) 2023 Tyler Nivin <tyler@nivin.tech>
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy of this software
@@ -21,7 +21,7 @@
 #
 # SPDX-License-Identifier: MIT
 # Copyright 2024 - 2024, Tyler Nivin <tyler@nivin.tech>
-#   and the ddns-digital-ocean contributors
+#   and the digital-ocean-dynamic-dns contributors
 
 # https://github.com/korandoru/hawkeye
 
@@ -63,7 +63,7 @@ excludes = []
 # * 'hawkeye.core.filename' is the current file name, like: pom.xml.
 [properties]
 inceptionYear = 2023
-projectName = "ddns-digital-ocean"
+projectName = "digital-ocean-dynamic-dns"
 copyrightOwner = "Tyler Nivin <tyler@nivin.tech>"
 
 [git]
