--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-# ddns-digital-ocean
+# digital-ocean-dynamic-dns
 # Copyright (C) 2023 Tyler Nivin <tyler@nivin.tech>
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy of this software
@@ -21,11 +21,11 @@
 #
 # SPDX-License-Identifier: MIT
 # Copyright 2023 - 2024, Tyler Nivin <tyler@nivin.tech>
-#   and the ddns-digital-ocean contributors
+#   and the digital-ocean-dynamic-dns contributors
 
 [project]
-name = "ddns_digital_ocean"
-version = "0.4.0"
+name = "digital-ocean-dynamic-dns"
+version = "1.0.0"
 description = "Python-based CLI tool for managing dynamic dns."
 authors = [{ name = "Tyler Nivin", email = "tyler@nivin.tech" }]
 license = { file = "LICENSE" }
@@ -60,7 +60,7 @@ Repository = "https://github.com/nivintw/ddns"
 Issues = "https://github.com/nivintw/ddns/issues"
 
 [project.scripts]
-do_ddns = 'ddns_digital_ocean.ddns:run'
+do_ddns = 'digital_ocean_dynamic_dns.ddns:run'
 
 
 [tool.uv]
@@ -73,6 +73,8 @@ dev-dependencies = [
     "pytest-cov>=5.0.0",
     "ipython>=8.27.0",
 ]
+package = true
+
 
 [tool.ruff]
 # Uncomment to over-ride the line-length used by ruff.
@@ -106,14 +108,14 @@ select = [
 [tool.ruff.lint.isort]
 # ruff/isort are detecting first-party most of the time correctly.
 # Set this explicitly if needed.
-# known-first-party = ["ddns_digital_ocean"]
+# known-first-party = ["digital_ocean_dynamic_dns"]
 
 [tool.pytest.ini_options]
 # Commented out; adding coverage for every single test run slows things down
 # substantially.
-# addopts = "--cov=ddns_digital_ocean --cov-report html"
+# addopts = "--cov=digital_ocean_dynamic_dns --cov-report html"
 
 [tool.coverage.run]
 # Measure branch coverage in addition to statement coverage.
 branch = true
-# source_pkgs = ["ddns_digital_ocean"]
+# source_pkgs = ["digital_ocean_dynamic_dns"]
