--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -54,4 +54,12 @@ jobs:
         with:
           python-version: "3.12"
       - uses: yezz123/setup-uv@v4
-      - run: uv run pytest --cov=digital_ocean_dynamic_dns --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html
+      - name: Test with pytest
+        run: uv run pytest --cov=digital_ocean_dynamic_dns --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html
+      - name: Upload pytest test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-results
+          path: junit/test-results.xml
+        # Use always() to always run this step to publish test results when there are test failures
+        if: ${{ always() }}
