--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -56,6 +56,12 @@ jobs:
       - uses: yezz123/setup-uv@v4
       - name: Test with pytest
         run: uv run pytest --cov=digital_ocean_dynamic_dns --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html
+      - name: Test Summary
+        id: test_summary
+        uses: test-summary/action@v2
+        with:
+          paths: "junit/test-results.xml"
+        if: always()
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
