--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -60,7 +60,7 @@ jobs:
         id: test_summary
         uses: test-summary/action@v2
         with:
-          paths: "junit/test-results.xml"
+          paths: junit/test-results.xml
           show: "all"
         if: always()
       - name: Upload pytest test results
