--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -62,7 +62,7 @@ jobs:
         with:
           paths: junit/test-results.xml
           show: "all"
-        if: always()
+        if: ${{ always() }}
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
