--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -57,7 +57,7 @@ jobs:
           python-version: "3.12"
       - uses: yezz123/setup-uv@v4
       - name: Test with pytest
-        run: uv run pytest --cov=digital_ocean_dynamic_dns --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html
+        run: uv run pytest --cov=digital_ocean_dynamic_dns --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html --cov-report=term:skip-covered | tee pytest-coverage.txt
       - name: Test Summary
         id: test_summary
         uses: test-summary/action@v2
@@ -71,6 +71,11 @@ jobs:
           message: |
             ${{ steps.test_summary.outputs.passed }}/${{ steps.test_summary.outputs.total }} tests passed
           comment_tag: test_results
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-coverage-path: ./pytest-coverage.txt
+          junitxml-path: junit/test-results.xml
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
