--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -57,7 +57,7 @@ jobs:
           python-version: "3.12"
       - uses: yezz123/setup-uv@v4
       - name: Test with pytest
-        run: uv run pytest --cov=digital_ocean_dynamic_dns --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html --cov-report=term:skip-covered | tee pytest-coverage.txt
+        run: uv run pytest --cov=digital_ocean_dynamic_dns --junitxml=junit/test-results.xml --cov-report=xml:coverage.xml --cov-report=html
       - name: Test Summary
         id: test_summary
         uses: test-summary/action@v2
@@ -74,7 +74,7 @@ jobs:
       - name: Pytest coverage comment
         uses: MishaKav/pytest-coverage-comment@main
         with:
-          pytest-coverage-path: ./pytest-coverage.txt
+          pytest-xml-coverage-path: ./coverage.xml
           junitxml-path: junit/test-results.xml
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
