--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -23,7 +23,7 @@
 # Copyright 2024 - 2024, Tyler Nivin <tyler@nivin.tech>
 #   and the digital-ocean-dynamic-dns contributors
 
-name: pre-commit
+name: ci
 
 on:
   pull_request:
