--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -41,7 +41,7 @@ jobs:
           # this is required for the hawkeye license header checker to be able to
           # determine teh modified date of the files.
           fetch-depth: 0
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v4
       - uses: pre-commit/action@v3.0.1
         with:
           extra_args: --hook-stage manual --all-files
@@ -49,9 +49,14 @@ jobs:
   tests:
     permissions:
       pull-requests: write
+      contents: write
+      checks: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
       - uses: actions/setup-python@v4
         with:
           python-version: "3.12"
@@ -60,9 +65,20 @@ jobs:
         run: uv run pytest --cov=digital_ocean_dynamic_dns --junitxml=junit/test-results.xml --cov-report=xml:coverage.xml --cov-report=html
       - name: Pytest coverage comment
         uses: MishaKav/pytest-coverage-comment@main
+        id: coverageComment
         with:
           pytest-xml-coverage-path: ./coverage.xml
           junitxml-path: junit/test-results.xml
+      - name: Update Readme with Coverage Html
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: |
+          sed -i '/<!-- Pytest Coverage Comment:Begin -->/,/<!-- Pytest Coverage Comment:End -->/c\<!-- Pytest Coverage Comment:Begin -->\n\${{ steps.coverageComment.outputs.content }}\n<!-- Pytest Coverage Comment:End -->' ./README.md
+      - name: Commit & Push changes to Readme
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: actions-js/push@master
+        with:
+          message: Update coverage on Readme
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
