--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -53,10 +53,18 @@ jobs:
       checks: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Get App Token for Coverage App
+        uses: actions/create-github-app-token@v1
+        id: app-token
         with:
-          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+          app-id: ${{ vars.COVERAGE_APP_APPID }}
+          private-key: ${{ secrets.COVERAGE_APP_SECRET }}
+
+      - name: Checkout with App Token
+        uses: actions/checkout@v4
+        with:
           fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+          token: ${{ steps.app-token.outputs.token }}
       - uses: actions/setup-python@v4
         with:
           python-version: "3.12"
@@ -69,6 +77,7 @@ jobs:
         with:
           pytest-xml-coverage-path: ./coverage.xml
           junitxml-path: junit/test-results.xml
+
       - name: Update Readme with Coverage Html
         if: ${{ github.ref_name == github.event.repository.default_branch }}
         run: |
@@ -78,7 +87,6 @@ jobs:
         uses: actions-js/push@master
         with:
           message: Update coverage on Readme
-          github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
