--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -78,16 +78,16 @@ jobs:
           pytest-xml-coverage-path: ./coverage.xml
           junitxml-path: junit/test-results.xml
 
-      - name: Update Readme with Coverage Html
-        if: ${{ github.ref_name == github.event.repository.default_branch }}
-        run: |
-          sed -i '/<!-- Pytest Coverage Comment:Begin -->/,/<!-- Pytest Coverage Comment:End -->/c\<!-- Pytest Coverage Comment:Begin -->\n\${{ steps.coverageComment.outputs.content }}\n<!-- Pytest Coverage Comment:End -->' ./README.md
-      - name: Commit & Push changes to Readme
-        if: ${{ github.ref_name == github.event.repository.default_branch }}
-        uses: actions-js/push@master
-        with:
-          message: Update coverage on Readme
-          github_token: ${{ steps.app-token.outputs.token }}
+      # - name: Update Readme with Coverage Html
+      #   if: ${{ github.ref_name == github.event.repository.default_branch }}
+      #   run: |
+      #     sed -i '/<!-- Pytest Coverage Comment:Begin -->/,/<!-- Pytest Coverage Comment:End -->/c\<!-- Pytest Coverage Comment:Begin -->\n\${{ steps.coverageComment.outputs.content }}\n<!-- Pytest Coverage Comment:End -->' ./README.md
+      # - name: Commit & Push changes to Readme
+      #   if: ${{ github.ref_name == github.event.repository.default_branch }}
+      #   uses: actions-js/push@master
+      #   with:
+      #     message: Update coverage on Readme
+      #     github_token: ${{ steps.app-token.outputs.token }}
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
