feat(ci): :construction_worker: Add semantic-release to CI workflow
Should enable semantic-release to be run on the main branch from now on

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,3 +118,7 @@ select = [
 # Measure branch coverage in addition to statement coverage.
 branch = true
 # source_pkgs = ["digital_ocean_dynamic_dns"]
+
+[tool.semantic_release]
+version_toml = ["pyproject.toml:project.version"]
+version_variables = ["src/digital_ocean_dynamic_dns/__init__.py:__version__"]
