--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -53,6 +53,7 @@ jobs:
       checks: write
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
           python-version: "3.12"
