feat: :construction_worker: Add build_command for semantic release
add build command for semantic release to build libraries. Also update manage-version job to only run on non-tag pushes to main.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,3 +122,4 @@ branch = true
 [tool.semantic_release]
 version_toml = ["pyproject.toml:project.version"]
 version_variables = ["src/digital_ocean_dynamic_dns/__init__.py:__version__"]
+build_command = "uv build"
