fix: :construction_worker: switch to not using python-semantic-release GH action.
The github action runs a docker container which in our case causes an issue because we want our build_command to be `uv build` and we can't install uv into the semantic-release container.

--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -109,8 +109,7 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
       - uses: yezz123/setup-uv@v4 # need uv available to run the build command.
       - name: Python Semantic Release
-        # Adjust tag with desired version if applicable. Version shorthand
-        # is NOT available, e.g. vX or vX.X will not work.
-        uses: python-semantic-release/python-semantic-release@v9.8.8
-        with:
-          github_token: ${{ steps.app-token.outputs.token }}
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+        run: |
+          uv tool run semantic-release
