--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -112,4 +112,5 @@ jobs:
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
+          uv tool install python-semantic-release
           uv tool run semantic-release
