fix: :construction_worker: Add `uv tool run semantic-release publish` to publish the built artifacts to the release
I would have thought this happened automatically since the version command runs the build, but i'm not seeing them on the release...

--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -114,3 +114,4 @@ jobs:
         run: |
           uv tool install python-semantic-release
           uv tool run semantic-release version
+          uv tool run semantic-release publish
