--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -85,7 +85,7 @@ jobs:
       #     github_token: ${{ steps.app-token.outputs.token }}
 
   version-manage:
-    if: github.ref_name == github.event.repository.default_branch && ! startsWith(github.ref, 'refs/tags/')
+    if: github.ref_name == github.event.repository.default_branch
     needs: [pre-commit, tests]
     concurrency: release
     permissions:
