ci: :construction_worker: Add cancel-in-progress: true for the version-manage job

--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -87,7 +87,9 @@ jobs:
   version-manage:
     if: github.ref_name == github.event.repository.default_branch
     needs: [pre-commit, tests]
-    concurrency: release
+    concurrency:
+      group: release
+      cancel-in-progress: true
     permissions:
       pull-requests: write
       contents: write
