--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -79,7 +79,7 @@ jobs:
           namedLogo: python
 
   version-manage:
-    if: github.ref_name == github.event.repository.default_branch && github.actor != 'python-semantic-release'
+    if: github.ref_name == github.event.repository.default_branch && github.actor != 'nivintw-ci-app[bot]'
     needs: [pre-commit, tests]
     concurrency:
       group: release
@@ -90,8 +90,6 @@ jobs:
       id-token: write
     runs-on: ubuntu-latest
     steps:
-      - name: WHO AM I
-        run: echo ${{ github.actor }}
       - name: Get App Token for write CI actions
         # Special Github App user required to push directly to branches
         # that otherwise restrict direct pushes.
